@@ -2,10 +2,9 @@
 @appendix Reference manual details
 
 @menu
-* American Chords::            
-* Jazz chords::                 
-* MIDI instruments::            
-* The Feta font::
+* Chord name chart::		
+* MIDI instruments::		
+* The Feta font::		
 @end menu
 
 
