@@ -2,20 +2,38 @@
 CONTRIBUTORS
 
 Graham Percival
-Rune Zedeler
+Heikki Junes
 Jeremie Lumbroso
 Juergen Reuter
 Kim Shrier
-Heikki Junes
-
+Rune Zedeler
+Werner Lemberg
 
 BUG HUNTERS
 
+Amelie Zapf
+Andrew Schaaf
+Atte Andre Jensen
+Bob Harrington
+Chris Jackson
+Chris Sawer
+David Bobroff
 Erik Sandberg
+Fernando Pablo Lopez-Lezcano
 Hans Kieserman
 Jeremie Lumbroso
-Karl-Johan Karlsson 
+John Potelle
+John Williams
 Karl Berry
-Werner Lemberg
-Thomas Rijniers
+Karl-Johan Karlsson 
 Klaus Zimmermann
+Koblinger Egmont
+Paul Scott
+Pedro Kroger
+Richard Shann
+Ryan O'Neil
+Simon Bailey
+Stanislav Brabec
+Thomas Rijniers
+Werner Lemberg
+Yotam Medini
